force-app/main/default/objects/UserRole_Home__dll/fields/ContactAccessForAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>ContactAccessForAccountOwner__c</fullName>
    <label>Contact Access Level for Account Owner</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ContactAccessForAccountOwner</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>