force-app/main/default/objects/UserRole_Home__dll/fields/MayForecastManagerShare__c.field-meta.xml
<CustomField>
    <fullName>MayForecastManagerShare__c</fullName>
    <label>May Forecast Manager Share</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>MayForecastManagerShare</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>