force-app/main/default/objects/UserRole_Home__dll/fields/PortalAccountId__c.field-meta.xml
<CustomField>
    <fullName>PortalAccountId__c</fullName>
    <label>Account ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PortalAccountId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>