force-app/main/default/objects/UserRole_Home__dll/fields/PortalAccountOwnerId__c.field-meta.xml
<CustomField>
    <fullName>PortalAccountOwnerId__c</fullName>
    <label>User ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PortalAccountOwnerId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>