force-app/main/default/objects/UserRole_Home__dll/fields/PortalRole__c.field-meta.xml
<CustomField>
    <fullName>PortalRole__c</fullName>
    <label>Portal Role</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PortalRole</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>