force-app/main/default/objects/UserRole_Home__dll/fields/RollupDescription__c.field-meta.xml
<CustomField>
    <fullName>RollupDescription__c</fullName>
    <label>Description</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>RollupDescription</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>